--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chobo-server",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
+  "license": "ISC",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "watch": "nodemon --exec babel-node -- src/app.ts --extensions .ts,.js",
@@ -11,7 +11,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
   "dependencies": {
     "@babel/runtime": "^7.13.10",
     "@types/body-parser": "^1.19.0",
@@ -19,6 +18,8 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
     "@types/knex": "^0.16.1",
+    "@types/request": "^2.48.5",
+    "@types/request-promise-native": "^1.0.17",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
     "archiver": "^3.1.1",
@@ -45,6 +46,8 @@
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.9",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
@@ -65,4 +68,3 @@
     "@babel/register": "^7.13.14"
   }
 }
-
