--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jest-matcher-deep-close-to": "^2.0.1",
     "knex": "^0.95.4",
     "listr": "^0.14.3",
+    "moment": "^2.29.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
